@@ -1,12 +1,8 @@
 package com.github.andre10dias.sbootexp_security.api;
 
 import com.github.andre10dias.sbootexp_security.api.dto.CadastroUsuarioDTO;
-import com.github.andre10dias.sbootexp_security.api.dto.UsuarioDTO;
 import com.github.andre10dias.sbootexp_security.api.mapper.CadastroUsuarioMapper;
-import com.github.andre10dias.sbootexp_security.api.mapper.UsuarioMapper;
-import com.github.andre10dias.sbootexp_security.domain.entity.Grupo;
 import com.github.andre10dias.sbootexp_security.domain.entity.Usuario;
-import com.github.andre10dias.sbootexp_security.domain.entity.UsuarioGrupo;
 import com.github.andre10dias.sbootexp_security.service.GrupoService;
 import com.github.andre10dias.sbootexp_security.service.UsuarioService;
 import lombok.RequiredArgsConstructor;
@@ -17,9 +13,7 @@ import org.springframework.transaction.annotation.Transactional;
 import org.springframework.web.bind.annotation.*;
 
 import java.net.URI;
-import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @RequiredArgsConstructor
 @RestController
@@ -43,7 +37,7 @@ public class UsuarioController implements GenericController {
     @PreAuthorize("hasRole('ADMIN')")
     public ResponseEntity<List<CadastroUsuarioDTO>> listar() {
         List<Usuario> usuarios = usuarioService.listar();
-        List<CadastroUsuarioDTO> dtos = usuarios.stream().map(CadastroUsuarioMapper::toDTO).collect(Collectors.toList());
+        List<CadastroUsuarioDTO> dtos = usuarios.stream().map(CadastroUsuarioMapper::toDTO).toList();
         return ResponseEntity.ok(dtos);
     }
 
